trunk/Archive2/8d/31d1e5c908ed10/output
main.cpp: In function 'int main()':
main.cpp:12:16: error: 'A' is an inaccessible base of 'B'
     d.play(b, c);
                ^
main.cpp:5:10: error:   initializing argument 1 of 'void D::play(A, A)'
     void play(A a, A b) {}
          ^
